added credits in popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -56,8 +56,9 @@
         <h4>
             <a href="https://codeforces.com/profile">View your profile analytics</a>
         </h4>
-        Developed by <a href="https://codeforces.com/profile/apoorva222g">apoorva222g</a>
-        Support <a href="https://buymeacoffee.com/apoorva222g">☕Buy me a coffee</a>
+        Originally Developed by <a href="https://codeforces.com/profile/apoorva222g">apoorva222g</a>
+        Updates added by <a href="https://codeforces.com/profile/ashrayy">Ashrayy</a>
+
     </div>
     <script src="js/utils.js"></script>
     <script src="js/popup.js"></script>
